# Project01

./: CMakeLists.txt  INSTRUCTION.md  devlog.md
app/: CMakeLists.txt
app/include/: file_logger.h  logger.h
app/src/: file_logger.c  logger.c
scripts/: build.sh
src/: CMakeLists.txt
